codepkg/objects/BankAccount__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>BankAccounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount_of_money__c</fullName>
        <label>Amount of money</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BankAccountNumber__c</fullName>
        <externalId>true</externalId>
        <label>BankAccountNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Debt_in_a_month__c</fullName>
        <formula>(Amount_of_money__c / 12)*1.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debt in a month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_in_a_month__c</fullName>
        <formula>(Amount_of_money__c/12)*0.05</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest in a month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_credit__c</fullName>
        <formula>Account__r.Sum_of_credit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Bank_Account__c</fullName>
        <label>Type Bank Account</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>debit</fullName>
                    <default>true</default>
                    <label>debit</label>
                </value>
                <value>
                    <fullName>credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testmo__c</fullName>
        <formula>IF(ISPICKVAL(Type_Bank_Account__c, &quot;debit&quot;) ,Amount_of_money__c, Amount_of_money__c*(-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testmo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bank Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <recordTypes>
        <fullName>Credit</fullName>
        <active>true</active>
        <label>Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Debit</fullName>
        <active>true</active>
        <label>Debit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>